    inter-mediator-plugin-jsonformatter
    inter-mediator-plugin-jquerydatepicker
    inter-mediator-plugin-jqueryfileupload
    inter-mediator-plugin-popupselector
    inter-mediator-plugin-tinymce
- In the params.php file, the $bootWithInstalledNode variable is defined for use a node.js in path parameter.
  This is for manual installation for npm based libraries.
- In the params.php file, the $preventSSAutoBoot is definde for it doesn't boot a service server, just in case of
  a server manager is going to boot the service server manually.
- FileMaker_FX and FileMaker_DataAPI classes support the value "[increment]1" and "[decrement]1" in case of updating
  a record. [increment] and [decrement] are defined value and following any number.
- Multiple navigation bars are supported. Setting any tags to class="IM_NAVIGATOR", and both id and class can be set.
- Messages from INTER-Mediator can be customized with the params.php file. The 'messages' variable is used for storing
  replacing/adding messages. The value of the messages variable has to be the 2-dimensional array with the language and
  the message number as indices. The params.php file has a sample of overwriting messages.
- INTERMediatorOnPage.doBeforePartialConstruct and INTERMediatorOnPage.doAfterPartialConstruct methods can be defined.
  These are called just before/after to construct the page partially, i.e. INTERMediator.constructMain(<Existing Context>.
- Slack messeging can be sent as like e-mail. "messaging" key is introduced and it can be replaced with "send-mail".
- Removed the Internet Explorer specific codes.
- Removed the INTERMediatorLib.toNumber(str) method. Alternative one is the IMLibFormat.numberFormat(str, digit).
- [BUG FIX] After the password of ldap user is changed, propagation of the new password is improved.
- [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.