@@ -239,6 +239,7 @@ $serviceServerHost = "localhost";
 $stopSSEveryQuit = false;
 $bootWithInstalledNode = false;
 $preventSSAutoBoot = false;
+$notUserServiceServer = false;
 
 // Altering messages, overwrite and/or adding new messages. The first index is a language, and the second is the error number.
 $messages['default'][1022] = "We don't support Internet Explorer. We'd like you to access by Edge or any other major browsers.";
